Make quotas context cleanup lazy
*) Clean up service quotas only if they were changed.
*) Code clean up in setup() and cleanup() to avoid copy paste
*) Use append instead of extend in quotas tests
*) Init clients as well lazy
*) Add functional tests for quotas
*) Fix names of nova quotas
*) Fix don't break everything if you are not able to delete quota

Closes-bug: #1329907
Closes-bug: #1329795
Closes-bug: #1329379

Change-Id: I2ea781f08a731500bfff85e4c25e9786108b8b70

--- a/rally-scenarios/rally-neutron.yaml
+++ b/rally-scenarios/rally-neutron.yaml
@@ -1,4 +1,39 @@
 ---
+  Dummy.dummy:
+    -
+      args:
+        sleep: 0.01
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 5
+          users_per_tenant: 5
+        quotas:
+          nova:
+            instances: 200
+            cores: 200
+            ram: -1
+            metadata_items: -1
+            injected_files: -1
+            injected_file_content_bytes: -1
+            injected_file_path_bytes: -1
+            key_pairs: 500
+          cinder:
+            gigabytes: -1
+            snapshots: -1
+            volumes: -1
+          neutron:
+            network: -1
+            subnet: -1
+            port: 200
+            router: 300
+            floatingip: -1
+            security_group: -1
+            security_group_rule: -1
+
   NeutronNetworks.create_and_list_networks:
     -
       args:
