--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -101,7 +101,7 @@
   Dummy.dummy:
     -
       args:
-        sleep: 5
+        sleep: 0.25
       runner:
         type: "constant"
         times: 20
@@ -110,6 +110,35 @@
         users:
           tenants: 1
           users_per_tenant: 1
+    -
+      args:
+        sleep: 0.01
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 5
+          users_per_tenant: 5
+        quotas:
+          nova:
+            instances: 200
+            cores: 200
+            ram: -1
+            floating_ips: 200
+            fixed_ips: 200
+            metadata_items: -1
+            injected_files: -1
+            injected_file_content_bytes: -1
+            injected_file_path_bytes: -1
+            key_pairs: 500
+            security_groups: 400
+            security_group_rules: 600
+          cinder:
+            gigabytes: -1
+            snapshots: -1
+            volumes: -1
 
   Dummy.dummy_exception:
     -
