--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ python-cinderclient>=1.0.6
 python-heatclient>=0.2.9
 python-ceilometerclient>=1.0.6
 python-ironicclient
+python-subunit>=0.0.18
 requests>=1.1
 SQLAlchemy>=0.7.8,<=0.9.99
 six>=1.7.0
