Sync necessary modules from oslo incubator for worker service
Sync modelus: service, periodic_task and related dependencies
from oslo-incubator. Using the following command in oslo-incubator:

python update.py --base rally --dest-dir ../rally --modules \
periodic_task,service

Change-Id: I0b8278404d53a91add7a8cf3876121aad1e497c2

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -11,6 +11,8 @@ module=log
 module=test
 module=fixture
 module=uuidutils
+module=service
+module=periodic_task
 
 # The base module to hold the copy of openstack.common
 base=rally
