use oslo.db module
* Use oslo.db module instead of rally.openstack.common.db
* Remove rally/openstack/common/db

Change-Id: I78e29810f4bf6cc624417744dd74f15ef2281edf

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ iso8601>=0.1.9
 jsonschema>=2.0.0,<3.0.0
 netaddr>=0.7.6
 oslo.config>=1.2.1
+oslo.db>=0.2.0
 paramiko>=1.13.0
 pbr>=0.6,!=0.7,<1.0
 pecan>=0.4.5
