--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,6 @@ python-saharaclient>=0.6.0
 python-subunit>=0.0.18
 requests>=1.1
 SQLAlchemy>=0.8.4,<=0.8.99,>=0.9.7,<=0.9.99
+sphinx>=1.1.2,!=1.2.0,<1.3
 six>=1.7.0
 WSME>=0.6
