--- a/doc/samples/tasks/neutron/create_and_list_subnets.yaml
+++ b/doc/samples/tasks/neutron/create_and_list_subnets.yaml
@@ -2,18 +2,18 @@
   NeutronNetworks.create_and_list_subnets:
     -
       args:
-        network_create_args:
-        subnet_create_args:
+        network_create_args: {}
+        subnet_create_args: {}
         subnet_cidr_start: "1.1.0.0/30"
         subnets_per_network: 2
       runner:
         type: "constant"
-        times: 100
-        concurrency: 10
+        times: 10
+        concurrency: 5
       context:
         users:
-          tenants: 1
-          users_per_tenant: 1
+          tenants: 5
+          users_per_tenant: 5
         quotas:
           neutron:
             network: -1
