Add basic tools for integration tests
Add class for represent task config
Add integration tests for rally SLA
Generate html test results

Change-Id: Ifc77d1efad1456df0325fcb0d0d9dca0d9b46866

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,8 @@ distribute = false
 commands = {posargs}
 
 [testenv:cli]
-commands = python -m unittest tests_ci.test_cli
+sitepackages = True
+commands = {toxinidir}/tests_ci/rally-integrated.sh
 
 [testenv:cover]
 commands = python setup.py testr --coverage --testr-args='{posargs}'
