Add Network Context Class
Context for networking resources.

Note:
  using this context in security_groups related scenarios
  will be added in another patch.

Main changes:
  * the network context class
  * rally.benchmark.utils.RAMInt class that represents integer value in RAM,
    so we can make process safe sync of cluster-unique stuff (like CIDRs)
  * rally.benchmark.wrappers.network module, that unifies network service
    implementation, for usage both in context and scenarios
  * optimization in NovaScenario._boot_server

Co-Authored-By: Lingxian Kong <anlin.kong@gmail.com>
Co-Authored-By: Timur Nurlygayanov <tnurlygayanov@mirantis.com>
Co-Authored-By: Sergey Skripnick <sskripnick@mirantis.com>
Co-Authored-By: Vadim Rovachev <vrovachev@mirantis.com>
Co-Authored-By: Aleksandr Maretskiy <amaretskiy@mirantis.com>

Implements: blueprint benchmark-context-network
Change-Id: Ia2c461ba3421dc9650c4bb7949c115fee08c6b7b

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -334,6 +334,28 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        auto_assign_nic: True
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "^cirros.*uec$"
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network:
+          start_cidr: "100.1.0.0/26"
+          networks_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.boot_and_list_server:
     -
       args:
