--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -928,6 +928,27 @@
             name: "m1.tiny"
         image:
             name: "^cirros.*uec$"
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        network:
+          start_cidr: "100.100.0.0/24"
+          networks_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "^cirros.*uec$"
         force_delete: true
       runner:
         type: "constant"
