Periodic runner refactoring
  'preiodic' runner renamed to rps (runs per second).
  Extensible pool of multiprocessing.Process was implemented instead
  of using constant length multiprocessing.Pool. That should decrease memory
  usage on large iterations and related errors.

Change-Id: I6e367ea30d89d5d0e7ba212ed22e8658421ac9bd

--- a/doc/samples/tasks/runners/rps/rps.yaml
+++ b/doc/samples/tasks/runners/rps/rps.yaml
@@ -4,9 +4,9 @@
       args:
         sleep: 5
       runner:
-        type: "periodic"
+        type: "rps"
         times: 20
-        period: 3
+        rps: 3
         timeout: 6
       context:
         users:
