Reduce number of points in generated charts
In some cases number of iterations is too much for direct charting.

Also reduce number of digits after the decimal point.

Change-Id: I7ae526ae41500a8a0c33a7014e93cde210687df9

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -166,6 +166,18 @@
           tenants: 1
           users_per_tenant: 1
 
+    -
+      args:
+        exception_probability: 0.05
+      runner:
+        type: "constant"
+        times: 2042
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
   Dummy.dummy_with_scenario_output:
     -
       runner:
