--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ python-cinderclient>=1.0.7
 python-heatclient>=0.2.9
 python-ceilometerclient>=1.0.6
 python-ironicclient
+python-saharaclient>=0.6.0
 python-subunit>=0.0.18
 requests>=1.1
 SQLAlchemy>=0.8.4,!=0.9.5,<=0.9.99
