Added Sahara Node Group Templates scenarios
One scenraio creates two types of node group templates and executes a
list operation.

The other creates and deletes popular types of node group templates.

Change-Id: Ie37151bb1ff195e6e0a67d85e693333da68f96e9

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -331,6 +331,34 @@
           tenants: 2
           users_per_tenant: 10
 
+  SaharaNodeGroupTemplates.create_and_list_node_group_templates:
+    -
+      args:
+        flavor:
+         name: "m1.small"
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
+  SaharaNodeGroupTemplates.create_delete_node_group_templates:
+    -
+      args:
+        flavor:
+         name: "m1.small"
+      runner:
+        type: "constant"
+        times: 100
+        concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
   Authenticate.validate_cinder:
     -
       args:
