--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -576,6 +576,23 @@
       sla:
         max_failure_percent: 0
 
+  CinderVolumes.create_and_delete_snapshot:
+    -
+      args:
+        force: false
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        volumes:
+          size: 1
+      sla:
+        max_failure_percent: 0
+
   GlanceImages.create_and_delete_image:
     -
       args:
