--- a/rally-scenarios/rally-neutron.yaml
+++ b/rally-scenarios/rally-neutron.yaml
@@ -33,6 +33,8 @@
             floatingip: -1
             security_group: -1
             security_group_rule: -1
+      sla:
+        max_failure_percent: 0
 
   NeutronNetworks.create_and_list_networks:
     -
@@ -49,6 +51,8 @@
         quotas:
           neutron:
              network: -1
+      sla:
+        max_failure_percent: 0
 
   NeutronNetworks.create_and_list_subnets:
     -
@@ -69,6 +73,8 @@
           neutron:
              network: -1
              subnet: -1
+      sla:
+        max_failure_percent: 0
 
   NeutronNetworks.create_and_list_routers:
     -
@@ -91,6 +97,8 @@
              network: -1
              subnet: -1
              router: -1
+      sla:
+        max_failure_percent: 0
 
   NeutronNetworks.create_and_list_ports:
     -
@@ -102,6 +110,18 @@
         type: "constant"
         times: 100
         concurrency: 10
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        quotas:
+          neutron:
+             network: -1
+             subnet: -1
+             router: -1
+             port: -1
+      sla:
+        max_failure_percent: 0
 
   VMTasks.boot_runcommand_delete:
     -
