Add cinder-update-and-delete quotas scenario
Since cinder support delete quotas now, we need to add the missing
delete related scenario and cleanup method.

Change-Id: If60b7122234c33c1f2cd9ea9aac6a0a57690a48f

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -470,6 +470,21 @@
       sla:
         max_failure_percent: 0
 
+  Quotas.cinder_update_and_delete:
+    -
+      args:
+        max_quota: 1024
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 1
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
   Quotas.cinder_update:
     -
       args:
