--- a/rally-scenarios/rally-neutron.yaml
+++ b/rally-scenarios/rally-neutron.yaml
@@ -42,8 +42,8 @@
         network_create_args:
       runner:
         type: "constant"
-        times: 100
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -63,8 +63,8 @@
         subnets_per_network: 2
       runner:
         type: "constant"
-        times: 100
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -86,8 +86,8 @@
         router_create_args:
       runner:
         type: "constant"
-        times: 100
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -108,8 +108,8 @@
         ports_per_network: 5
       runner:
         type: "constant"
-        times: 100
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -129,8 +129,8 @@
         network_create_args: {}
       runner:
         type: "constant"
-        times: 30
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -151,8 +151,8 @@
         subnets_per_network: 2
       runner:
         type: "constant"
-        times: 30
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -172,8 +172,8 @@
         ports_per_network: 10
       runner:
         type: "constant"
-        times: 30
-        concurrency: 10
+        times: 40
+        concurrency: 20
       context:
         users:
           tenants: 1
@@ -185,28 +185,161 @@
       sla:
           max_failure_percent: 0
 
-  VMTasks.boot_runcommand_delete:
+  NovaServers.boot_server:
     -
       args:
         flavor:
-          name: "m1.tiny"
+            name: "m1.tiny"
         image:
-          name: "cirros-0.3.2-x86_64-uec"
-        fixed_network: "private"
-        floating_network: "public"
-        use_floatingip: true
-        script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
-        interpreter: "/bin/sh"
-        username: "cirros"
+            name: "cirros-0.3.2-x86_64-uec"
       runner:
         type: "constant"
         times: 6
         concurrency: 3
       context:
         users:
-          tenants: 1
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.boot_and_delete_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.boot_and_list_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+        detailed: True
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 3
+      context:
+        users:
+          tenants: 3
           users_per_tenant: 1
-        quotas:
-          neutron:
-             network: -1
-             port: -1
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.boot_and_bounce_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+        actions:
+          -
+            hard_reboot: 1
+          -
+            soft_reboot: 1
+          -
+            stop_start: 1
+          -
+            rescue_unrescue: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.boot_server_from_volume_and_delete:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+        volume_size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.boot_server_from_volume:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+        volume_size: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.snapshot_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
+  NovaServers.resize_server:
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "cirros-0.3.2-x86_64-uec"
+        to_flavor:
+            name: "m1.small"
+        confirm: true
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
