Do not assume networks should be assigned
There are several places within the Nova benchark scenarios where we
are assuming networks should be assigned. This breaks a variety of
different deployments. Instead of always assigning a network, do so
based on whether a new scenario argument of auto_assign_nic=True.

Change-Id: I4e2dd58629f3c07b9928a95879056a79382fcf8b
Closes-Bug: #1353622

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -790,6 +790,7 @@
             name: "m1.tiny"
         image:
             name: "cirros-0.3.2-x86_64-uec"
+        auto_assign_nics: false
       runner:
         type: "constant"
         times: 4
