Fix semantic validation of context images
In the semantic validation of the images context it was assumed that the
parameter users is a dictionary that contains the key endpoint, whereas
users is a list of Clients objects. This was leading to a validation
error and any benchmark scenario that had in its configuration file this
context was failing.

Closes-Bug: 1356336
Change-Id: I6452a47975cd3adcd31ec7b7c4ca0159aec8776f

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -642,6 +642,24 @@
       sla:
         max_failure_percent: 0
 
+  GlanceImages.list_images:
+    -
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        images:
+          image_url: "http://download.cirros-cloud.net/0.3.1/cirros-0.3.1-x86_64-disk.img"
+          image_type: "qcow2"
+          image_container: "bare"
+          images_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
   NovaServers.boot_and_delete_server:
     -
       args:
