Fix failing tests in gates
This tests actually were wrong since begging. Cause __lt__ and __gt__
stuff works only in case of instance of classes.
So I really don't know why this worked at all

Add any_order=True to some of assert_has_calls

Closes-Bug: #1358744

Change-Id: Ia699611c14e25b4a1d4592304192c444ba26f853

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ setenv = VIRTUAL_ENV={envdir}
          LANG=en_US.UTF-8
          LANGUAGE=en_US:en
          LC_ALL=C
+         PYTHONHASHSEED=0
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
