--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pbr>=0.6,!=0.7,<1.0
 pecan>=0.5.0
 PrettyTable>=0.7,<0.8
 PyYAML>=3.1.0
+python-designateclient>=1.0.0
 python-glanceclient>=0.13.1
 python-keystoneclient>=0.10.0
 python-novaclient>=2.17.0
