Add Http Request Scenario
* (сheck-random-request) Add Multiple Http request scenario which
takes as input a list of Requests and compares response of random
picked request from the list with the expected Response.

* (сheck-request) Improve flexiblity of check-response scenario and
rename check-response to check-request.

Co-Authored-By: kumar rishabh <shailrishabh@gmail.com>
Co-Authored-By: Roman Vasilets <rvasilets@mirantis.com>

Change-Id: Id70935616c013271392219b1e642b5b87ddb4b9c

--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -468,15 +468,16 @@
         failure_rate:
           max: 0
 
-  Requests.check_response:
+  HttpRequests.check_request:
     -
       args:
-          url: "http://git.openstack.org/cgit"
-          response: 200
+        url: "http://www.example.com"
+        method: "GET"
+        status_code: 200
       runner:
         type: "constant"
-        times: 1
-        concurrency: 1
+        times: 2
+        concurrency: 2
       sla:
         failure_rate:
           max: 0
